--- a/resource/controllers/style.css
+++ b/resource/controllers/style.css
@@ -1,250 +1,505 @@
+/* import the fonts from google font */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family:'Segoe UI', sans-serif;
-}
-
-body{
-    background: black;
-    /*background: url(../../../Downloads/WallpaperDog-10926470.jpg);*/
-}
-
-a{
-    color: white;
     text-decoration: none;
+    scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif;
 }
 
-.navbar{
-    display: flex;
+:root {
+    --bg-color: #080808;
+    --second-bg-color: #6e59d9;
+    --text-color: white;
+    --main-color: #6cd9b6;
+    --second-bg-color-2: #383454;
+}
+
+html {
+    font-size: 60%;
+    overflow-x: hidden;
+}
+
+body {
+    /* background: white; */
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+
+.header {
     position: fixed;
-    left: 0;
-    top: 0;
     width: 100%;
-    padding: 25px 9%;
+    top: 0;
+    left: 0;
+    padding: 4rem 15%;
+    background: rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    z-index: 1000;
 }
 
-.navbar .logo{
-    font-size: 18px;
+#menu-icon {
+    font-size: 4rem;
+    color: var(--main-color);
+    display: none;
+}
+
+.logo {
+    font-size: 2rem;
+    color: var(--text-color);
     font-weight: 700;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
 }
 
-.navbar ul{
-    display: flex;
-    /*width: 100%;
-    list-style: none;
-    align-items: center;
-    justify-content: flex-end;*/
+.logo:hover {
+    color: var(--main-color);
 }
 
-.navbar ul li{
-    list-style: none;
-    margin-left: 35px;
+span {
+    background: var(--second-bg-color);
+    background-clip: text;
+    color: transparent;
 }
 
-.navbar ul li a{
-    font-size: 16px;
+.navbar a{
+    font-size: 1.8rem;
+    color: var(--text-color);
+    margin-left: 4rem;
     font-weight: 500;
-    transition: .5s;
+    transition: 0.3s ease-in-out;
+    border-bottom: 3px solid transparent;
 }
 
-.navbar ul li:hover a,
-.navbar ul li.active a{
-    background-color: yellow;
+.navbar a:hover {
+    color: var(--main-color);
+    border-bottom: 3px solid var(--main-color);
 }
 
-.home{
-    align-items: center;
-    display: flex;
-    height: 100vh;
-    padding: 60px 9% 0;
-    color: white;
-}
-
-.home-info{
-    padding-right: 100px;
-}
-
-.home-info h1{
-    font-size: 40px;
-}
-
-.home-info h3{
-    font-size: 20px;
-    margin-top: 0px;
-}
-
-.home-info p{
-    font-size: 15px;
-    margin: 10px 0 25px;
-}
-
-.home-info .btn-sci{
-    display: flex;
-    align-items: center;
-}
-
-.btn{
-    color: black;
-    display: inline-block;
-    background:slateblue;
-    border: 2px solid slateblue;
-    border-radius: 40px;
-    box-shadow: 0 0 10px slateblue;
-    padding: 10px 30px;
-    font-size: 16px;
-    font-weight: 600;
-    transition: .5s;
-}
-
-.btn:hover{
-    background: transparent;
-    box-shadow: none;
-    color: gold;
-}
-
-.home-info .btn-sci .sci{
-    margin-left: 15px;
-}
-
-.home-info .btn-sci .sci a{
-    color: blue;
-    border: 2px solid gold;
-    border-radius: 50%;
-    display: inline-flex;
-    font-size: 15px;
-    padding: 10px;
-    margin: 0 8px;
-    transition: .5s;
-}
-
-.home-info .btn-sci .sci a:hover{
-    background: yellow;
-    box-shadow: 0 0 10px yellow;
-    color: black;
-}
-
-.home-img .img-box{
-    background-color: blue;
-    height: 32vw;
-    width: 32vw;
-    border-radius: 50%;
-    padding: 5px;
-}
-
-.home-img .img-box .img-item{
-    display: flex;
-    height: 100%;
-    background: slateblue;
-    border-radius: 50%;
-    overflow: hidden;
-    position: relative;
-    justify-content: center;
-}
-
-.home-img .img-box .img-item img{
+.navbar.active{
     display: block;
-    object-fit: cover;
-    position: absolute;
-    width: 68%;
-    top: 5px;
 }
 
-.about{
+.gradient-btn {
+    font-size: 1.5rem;
+    padding: 1rem 1.5rem;
+    border-radius: 3rem;
+    background: linear-gradient(
+        270deg,
+        #6e59d9 10%,
+        #6cd9b6 100%
+    );
+    border: none;
+    text-wrap: nowrap;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    
+}
+
+.gradient-btn:hover {
+    transform: scale(1.10);
+}
+
+/* create for section for home, about, services, projct, blogs and contacts */
+
+section {
+    min-height: 100vh;
+    padding: 9.1rem 15%;
+    gap: 6rem;
+}
+
+.home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid: 15rem;
+}
+
+.home-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: right;
+}
+
+.home-content h1 {
+    font-size: 4rem;
+    font-weight: 650;
+    margin-top: 1.5rem;
+    line-height: 1;
+}
+
+.home-content h3 {
+    margin: 1rem 0;
+    font-size: 2.5rem;
+}
+
+.home-img img {
+    width: 25vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.3s ease-in-out;
+}
+
+.home-img img:hover {
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color),
+                0 0 100px var(--main-color);
+    
+}
+
+.sci-icons a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    padding: 1rem;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    color: var(--main-color);
+    margin: 3rem 0.5rem;
+    transition: 0.3s ease-in-out;
+}
+
+.sci-icons a:hover {
+    background: var(--main-color);
+    color: var(--text-color);
+    transform: scale(1.2)translateY(-5px);
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+.btn-group {
+    display: flex;
+    gap: 2rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 3rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 3rem;
+    font-size: 1.5rem;
+    color: black;
+    border: 2px solid transparent;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color);
+}
+
+.btn-group a:nth-of-type(2) {
+    background-color: black;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 25px transparent;
+}
+
+.btn-group a:nth-of-type(2):hover {
+    background-color: var(--main-color);
+    color: black;
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+/* create a about section */
+
+.about {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2ren;
-    background: blue;
+    gap: 10rem;
+    background: var(--second-bg-color-2);
 }
 
-.about-img img{
-    width: 30vw;
-    font-size: 5rem;
+.about-img img {
+    width: 32vw;
+    border: 50%;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.5s ease-in-out;
 }
 
-.heading{
-    text-align: center;
+.about-img img:hover {
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color),
+                0 0 100px var(--main-color);
 }
 
 .about-content h2{
-    color: green;
+    font-size: 6.5rem;
     text-align: left;
-    line-height: 1.2;
 }
 
-.about-content p{
-    color: white;
-    font: size 1.6rem;
-    margin: 2rem 0 3rem;
+.about-content p {
+    font-size: 1.5rem;
 }
 
-.about-content .br{
-    color: white;
-    font: size 1.6rem;
-    margin: 2rem 0 3rem;
+.about-content .btn {
+    margin: 3rem 0;
 }
 
-
-/*.about{
-    font-size: 20px;
-    background: url(../../../Downloads/WallpaperDog-10926470.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 50px 8%;
-    width: 100%;
-    min-height: 100vh;
-
-    img{
-        float: left;
-        border-radius: 10px;
-        max-width: 20%;
-        height: auto;
-    }
-
-    @keyframes picture{
-    from{margin-left: 50%;}
-    to{margin-right: 50%;}
-    }
-}*/
-
-.second-photo{
-    background-color: limegreen;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    width: 100%;
-    padding: 4px;
-    justify-content: right;
-    margin: auto;
-    transform: scale(1);
-    img{
-        float: right;
-        border-radius: 5px;
-        max-width: 10.5%;
-        height: auto;
-    }
+::-webkit-scrollbar {
+    width: 20px;
 }
 
-.third-photo{
-    background-color: indianred;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    width: 100%;
-    padding: 4px;
+::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--bg-color);
+}
+
+/* create the section called services */
+
+.heading {
+    text-align: center;
+    font-size: 6.5rem;
+    margin: 5rem 0;
+}
+
+.services {
+    background-color: var(--bg-color);
+    /* color: black; */
+}
+
+.services h2 {
+    color: var(--text-color);
+}
+
+.services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    align-items: center;
     justify-content: center;
+    gap: 2rem;
+}
+
+.service-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #6e59d9;
+    height: 500px;
+    border-radius: 3rem;
+    cursor: pointer;
+    border: 5px solid transparent;
+    transition: 0.4s ease-in-out;
+}
+
+.service-box:hover{
+    background: var(--bg-colorr);
+    color: yellow;
+    border: 5px solid #6e59d9;
+    transform: scale(1.03);
+}
+
+.service-info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+
+}
+
+.service-info h4{
+    font-size: 4rem;
+    margin: 2rem 0;
+    font-weight: 600;
+
+}
+
+.service-info p{
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.7;
+}
+
+.service-info i{
+    font-size: 8rem;
+    color: var(--main-color);
+    margin-bottom: 1rem;
+}
+
+.projects{
+    background-color: var(--bg-color);
+}
+
+.projects-box{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    place-items: center;
+    gap: 3rem;
+    row-gap:5rem;
+}
+
+.project-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: var(--bg-color);
+    border: 2px solid var(--second-bg-color);
+    border-radius: 3rem;
+    gap: 2rem;
+    padding: 5rem 2rem;
+    overflow: hidden; 
+    cursor: pointer;
+    box-shadow: 0 0 5px var(--second-bg-color);
+    transition: 0.3s ease;
+}
+
+.project-card:hover{
+    box-shadow: 0 0 25px var(--second-bg-color), 
+                0 0 50px var(--second-bg-color);
+    transform: scale(1.02);
+}
+
+.project-card img{
+    max-width: 300px;
+    border-radius: 2rem;
+    object-fit: cover;
+}
+
+.project-card h3{
+    font-size: 3rem;
+}
+
+.project-card p{
+    font-size: 1.6rem;
 }
 
 .contact{
-    background-color: chartreuse;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
+    background-color: var(--bg-color);
+}
+
+.contact h2{
+    margin-bottom: 3rem;
+    color: var(--main-color);
+}
+
+.contact form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    margin: 5rem 0;
+    text-align: center;
+}
+
+.contact form .input-box input,
+.contact form textarea{
     width: 100%;
-    padding:4px;
+    padding: 2.5rem;
+    font-size: 1.8rem;
+    color: var(--second-bg-color);
+    background-color: var(--bg-color);
+    border: 2px solid var(--second-bg-color);
+    border-radius: 2rem;
+    margin: 1.5rem 0;
+    resize: none;
+}
+
+.footer{
+    background-color: var(--bg-color);
+    padding: 50px 0;
+}
+
+.footer .sci-icons{
+    text-align: center;
+}
+
+.footer ul{
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.footer ul li{
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.footer ul li a{
+    color: white;
+    border-bottom: 3px solid transparent;
+    transition: 0.3s ease-in-out;
+}
+
+.footer ul li a:hover{
+    border-bottom: 3px solid var(--second-bg-color);
+}
+
+.footer .copyright{
+    text-align: center;
+    margin-top: 40px;
+    font-size: 15px;
+}
+
+@media(max-width: 1285px){
+    #menu-icon{
+        display: block;
+    }
+    .navbar{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 50%;
+        padding: 1rem 3rem;
+        background: rgba(0, 0, 0, 0.8);
+        border-bottom-left-radius: 2rem;
+        border-left: 2px solid var(--second-bg-color);
+        border-bottom: 2px solid var(--second-bg-color);
+        display: none;
+    }
+    .navbar a{
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+        color: var(--text-color);
+        text-align: center;
+    }
+    .navbar.active{
+        display: block;
+    }
+    .gradient-btn{
+        display: none;
+    }
+    .home{
+        flex-direction: column-reverse;
+        margin: 5rem 0;
+        gap: 5rem;
+    }
+    .home-content{
+        text-align: center;
+        align-items: center;
+    }
+    .home-img img{
+        width: 56vw;
+    }
+    .about{
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+    .about h2{
+        text-align: center;
+        margin: 2rem 0;
+    }
+    .about img{
+        width: 52vw;
+    }
+    .conatact form{
+        flex-direction: column;
+    }
 }
